--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
     --operator-btn-bg-color: orange;
 
     --width: min(400px, 100vw);
-    --height: min(640px, 100vh);
+    --height: min(720px, 100vh);
     --num-btn-x: 4;
     --num-btn-y: 5;
     --min-display-result-height: 120px;
@@ -19,10 +19,13 @@
     --display-result-height: max(var(--min-display-result-height), 
                                 calc(var(--height) - var(--num-btn-y) * (var(--width) / var(--num-btn-x))));
     --box-size: max(var(--min-box-size), calc((var(--height) - var(--display-result-height)) / var(--num-btn-y)));
+
+    --font-size: clamp(10px, calc(var(--box-size) / 3), 40px);
 }
 
 #main-container {
     margin: auto;
+    margin-top: calc((100vh - var(--height)) / 2);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,20 +40,29 @@
 
 #result-display {
     background-color: var(--result-display-bg-color);
-    color: white;
     width: calc(var(--num-btn-x) * var(--box-size));
     height: var(--display-result-height);
     display: flex;
     flex-direction: row;
     align-items: flex-end;
     justify-content: flex-end;
-    font-size: 200%;
+}
+
+input[type=text] {
+    background-color: transparent;
+    border: 0;
+    padding: clamp(5px, 2vh, 20px);
+    text-align: end;
+    font-size: var(--font-size);
+    color: white;
+    box-sizing: border-box;
+    
 }
 
 button {
     height: var(--box-size);
     width: var(--box-size);
-    font-size: xx-large;
+    font-size: var(--font-size);
     font-weight: bold;
     color: white;
     border-radius: 0%;
@@ -73,6 +85,14 @@ button {
 
 #right-container > button {
     background-color: var(--operator-btn-bg-color);
+}
+
+button:hover {
+    filter: brightness(0.8);
+}
+
+button:active{
+    filter: brightness(0.7);
 }
 
 .row {
